--- a/Client/stylesheets/_flexios.scss
+++ b/Client/stylesheets/_flexios.scss
@@ -38,8 +38,8 @@ strong {
   justify-content: center;
   width: 100%;
   height: 100%;
-  vertical-align: middle;
-  padding-top: 40%;
+  vertical-align: top;
+  padding-top: 10%;
 }
 .overlayDiv {
   display: flex;
@@ -50,8 +50,8 @@ strong {
   background-color: $darker;
   padding: 25px;
   border-radius: 10px;
-  max-height: 50%;
-  vertical-align: middle;
+  max-height: 70%;
+  vertical-align: top;
 }
 .loginDiv,
 .signupDiv {
@@ -159,7 +159,6 @@ li:last-child {
   bottom: 0;
   background-color: $dark;
   z-index: 2;
-
 }
 #usernameLogin,
 #passwordLogin,
